--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "terser": "^5.31.0",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.0.0-alpha.20",
     "vite": "^5.2.0"
