--- a/vercel.json
+++ b/vercel.json
@@ -40,9 +40,10 @@
       "dest": "/index.html"
     }
   ],
+  
   "rewrites": [
     {
-      "source": "/((?!api/.*).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
