--- a/vercel.json
+++ b/vercel.json
@@ -40,13 +40,7 @@
       "dest": "/index.html"
     }
   ],
-  
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
+  "functions": {},
   "headers": [
     {
       "source": "/assets/(.*)",
