--- a/vercel.json
+++ b/vercel.json
@@ -23,7 +23,7 @@
       "destination": "/projects/$1"
     },
     {
-      "source": "/(.*\\.(js|css|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot))",
+      "source": "/(.*\\.(?:js|css|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot))",
       "destination": "/$1"
     },
     {
